--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -51,7 +51,7 @@
     <div *ngIf="searchbar" class="block w-full py-2 px-2">
       <ion-searchbar
         mode="ios"
-        class="ion-no-padding min-h-0"
+        class="ion-no-padding min-h-0 flex-wrap"
         [type]="searchbar.type"
         [inputmode]="searchbar.inputmode"
         [placeholder]="searchbar.placeholder"
