--- a/src/app/pages/teacher/expert-guide/expert-guide.page.html
+++ b/src/app/pages/teacher/expert-guide/expert-guide.page.html
@@ -1,13 +1,13 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>family-group</ion-title>
+    <ion-title>expert-guide</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">family-group</ion-title>
+      <ion-title size="large">expert-guide</ion-title>
     </ion-toolbar>
   </ion-header>
 </ion-content>
