feat(profile-page): Tích hợp user_settings, lựa chọn âm thanh nền, form cập nhật thông tin cá nhân

--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -12,7 +12,7 @@
 
     <!-- Form đăng nhập -->
     <ng-container *ngIf="loginForm && isReady">
-      <form class="w-full mt-6" [formGroup]="loginForm" (submit)="onClickLogin()">
+      <form class="w-full mt-6 login-form" [formGroup]="loginForm" (submit)="onClickLogin()">
         <ion-grid>
           <ion-row>
             <!-- App logo -->
