--- a/src/app/pages/profile/profile.page.html
+++ b/src/app/pages/profile/profile.page.html
@@ -31,26 +31,26 @@
         <ion-label class="py-2 text-gray-500">{{ TranslateKeys.NOTIFICATIONS_TITLE | translate }}</ion-label>
         <ion-icon name="chevron-forward" slot="end" class="text-base"></ion-icon>
       </ion-item>
-      <ion-item detail="false" routerLink="/{{PageRoutes.BADGE_COLLECTION}}">
-        <ion-icon name="ribbon" slot="start" color="primary" class="text-xl"></ion-icon>
-        <ion-label class="py-2 text-gray-500">{{ TranslateKeys.TITLE_BADGE_COLLECTION | translate }}</ion-label>
-        <ion-icon name="chevron-forward" slot="end" class="text-base"></ion-icon>
-      </ion-item>
-      <ion-item detail="false" routerLink="/{{PageRoutes.FAMILY_GROUP}}">
-        <ion-icon name="heart" slot="start" color="primary" class="text-xl"></ion-icon>
-        <ion-label class="py-2 text-gray-500">{{ TranslateKeys.TITLE_FAMILY_PAGE | translate }}</ion-label>
-        <ion-icon name="chevron-forward" slot="end" class="text-base"></ion-icon>
-      </ion-item>
-      <ion-item detail="false" routerLink="/{{PageRoutes.CLASS_GROUP}}">
+      <!--      <ion-item detail="false" routerLink="/{{PageRoutes.BADGE_COLLECTION}}">-->
+      <!--        <ion-icon name="ribbon" slot="start" color="primary" class="text-xl"></ion-icon>-->
+      <!--        <ion-label class="py-2 text-gray-500">{{ TranslateKeys.TITLE_BADGE_COLLECTION | translate }}</ion-label>-->
+      <!--        <ion-icon name="chevron-forward" slot="end" class="text-base"></ion-icon>-->
+      <!--      </ion-item>-->
+      <!--      <ion-item detail="false" routerLink="/{{PageRoutes.FAMILY_GROUP}}">-->
+      <!--        <ion-icon name="heart" slot="start" color="primary" class="text-xl"></ion-icon>-->
+      <!--        <ion-label class="py-2 text-gray-500">{{ TranslateKeys.TITLE_FAMILY_PAGE | translate }}</ion-label>-->
+      <!--        <ion-icon name="chevron-forward" slot="end" class="text-base"></ion-icon>-->
+      <!--      </ion-item>-->
+      <ion-item lines="none" detail="false" routerLink="/{{PageRoutes.CLASS_GROUP}}">
         <ion-icon name="easel" slot="start" color="primary" class="text-xl"></ion-icon>
-        <ion-label class="py-2 text-gray-500">{{ TranslateKeys.TITLE_CLASS_GROUP | translate }} 7A3</ion-label>
+        <ion-label class="py-2 text-gray-500">{{ TranslateKeys.TITLE_CLASS_GROUP | translate }} {{authData.classroom_id?.name}}</ion-label>
         <ion-icon name="chevron-forward" slot="end" class="text-base"></ion-icon>
       </ion-item>
-      <ion-item lines="none" detail="false" routerLink="/{{PageRoutes.SCHOOL_GROUP}}">
-        <ion-icon name="business" slot="start" color="primary" class="text-xl"></ion-icon>
-        <ion-label class="py-2 text-gray-500"> {{ TranslateKeys.TITLE_SCHOOL_GROUP | translate }}</ion-label>
-        <ion-icon name="chevron-forward" slot="end" class="text-base"></ion-icon>
-      </ion-item>
+      <!--      <ion-item lines="none" detail="false" routerLink="/{{PageRoutes.SCHOOL_GROUP}}">-->
+      <!--        <ion-icon name="business" slot="start" color="primary" class="text-xl"></ion-icon>-->
+      <!--        <ion-label class="py-2 text-gray-500"> {{ TranslateKeys.TITLE_SCHOOL_GROUP | translate }}</ion-label>-->
+      <!--        <ion-icon name="chevron-forward" slot="end" class="text-base"></ion-icon>-->
+      <!--      </ion-item>-->
     </ion-list>
 
     <!--  Âm thanh, hình ảnh, thông báo, ngôn ngữ  -->
