--- a/src/app/pages/profile/profile.page.html
+++ b/src/app/pages/profile/profile.page.html
@@ -3,7 +3,7 @@
     <!--  Avatar, tên, trang cá nhân  -->
     <ion-list class="mb-2">
       <ion-item lines="none" detail="false" routerLink="/{{PageRoutes.PERSONAL_DIARY}}">
-        <ion-avatar aria-hidden="true" slot="start">
+        <ion-avatar aria-hidden="true" slot="start" class="border">
           <img alt="Silhouette of a person's head" [src]="getUserAvatarImage()"/>
         </ion-avatar>
 
